About page overflow resolved

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -28,6 +28,7 @@ body
   margin: 0 auto
   max-width: 1280px
   width: 90%
+  overflow: hidden
 
   @media #{$medium-and-up}
   width: 85%
